tests/error/array_incompatible.gw
#! [contains] contains incompatible types
[null, 1];
